syntax = "proto3";

option go_package = "genproto/users_service";
package users_service;
import "teacher_service.proto";

service SupperAdminService{
    rpc Create(CreateSupperAdmin) returns (SupperAdmin){}
    rpc GetById(SupperAdminPrimaryKey) returns (SupperAdmin){}
    rpc GetList(GetListSupperAdminRequest) returns (GetListSupperAdminResponse){}
    rpc Update(UpdateSupperAdmin) returns (SupperAdmin){}
    rpc Delete(SupperAdminPrimaryKey) returns (Empty){}
}

message SupperAdminPrimaryKey{
    string id = 1;
}

message SupperAdmin{
    string id = 1;
    string full_name = 2;
    string password = 3;
    string login = 4;
    string role_id = 5;
    string created_at = 6;
    string updated_at = 7;
}

message CreateSupperAdmin{
    string full_name = 1;
    string password = 2;
    string login = 3;
    string role_id = 4;
}

message UpdateSupperAdmin{
    string id = 1;
    string full_name = 2;
    string password = 3;
    string login = 4;
    string role_id = 5;
}

message GetListSupperAdminRequest{
    int64 offset = 1;
    int64 limit = 2;
    string search = 3;
}

message GetListSupperAdminResponse{
    int64 count = 1;
    repeated SupperAdmin spper_admins = 2;
}